--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: cld
 Type: Package
 Title: a DSL to Process Causal Loop Diagrams in R
-Version: 0.1.81
-Date: 2020-01-23
+Version: 0.1.82
+Date: 2022-01-05
 Author: Adrian Staempfli
 Maintainer: Adrian Staempfli <adrian.staempfli@fhsg.ch>
 Description: Causal loop diagrams are a valuable tool for the
@@ -16,5 +16,9 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Imports: ggplot2, assertthat, magrittr
-Suggests: testthat
-RoxygenNote: 6.0.1
+Suggests: 
+    rmarkdown,
+    knitr,
+    testthat
+RoxygenNote: 7.1.2
+VignetteBuilder: knitr
